# md-reader

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/: demo.md
src/: App.vue  env.d.ts  main.ts  styles.css  theme-dark.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  pdf_export.rs  pdf_utils.rs
src/components/: FileTree.vue  FindBar.vue  MarkdownView.vue  SearchPanel.vue  SettingsDialog.vue  SourceEditor.vue  TocPanel.vue
src/composables/: exportInline.ts  exportStyles.ts  mathPlugin.ts  useExport.ts  useFileTree.ts  useFileWatcher.ts  useFindInPage.ts  useGlobalSearch.ts  useHistory.ts  useLinkRewriter.ts  useMarkdown.ts  useReadingSettings.ts  useResizable.ts  useScrollSpy.ts  useWindowState.ts
src/i18n/: en-US.ts  index.ts  zh-CN.ts
