[package]
name = "md-reader"
version = "0.1.1"
description = "A lightweight, fast, WYSIWYG Markdown desktop reader"
authors = ["Neilooo"]
license = "MIT"
homepage = "https://github.com/Neilooo/md-reader"
repository = "https://github.com/Neilooo/md-reader"
edition = "2021"
rust-version = "1.77"

[lib]
name = "md_reader_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
notify = "6"
notify-debouncer-mini = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
